# sdds

./: Makefile  README.md  VD_even.py  cli.py  engine.py  pyproject.toml
VD_games/: game_logic.py
VD_games/scripts/: VD_additional.py  VD_main.py
brain_games/: engine.py
brain_games/games/: calc.py  even.py
scripts/: brain_calc.py
