[project]
name = "games_project_svirko"
version = "0.2.0"
description = "Проект с играми для практической работы"
requires-python = ">=3.8"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
vd-games = "VD_games.scripts.VD_main:main"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]
